--- a/html/index.html
+++ b/html/index.html
@@ -6,97 +6,218 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Techtree</title>
     <meta name="subject" content="Techtree">
+    <link rel="stylesheet" href="../css/swiper-bundle.min.css"/> <!-- swiper css -->
+    <link rel="stylesheet" href="../css/common.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 </head>
 <body>
+    <div id="skip_nav">
+        <a href="#gnb">메뉴 바로가기</a>
+        <a href="#container">본문 바로가기</a>
+    </div>
     <div id="wrap">
-        <header id="header"></header>
+        <header id="header" class="header">
+            <div class="header_inner">
+                <h1 class="logo">
+                    <a href=""><strong class="blind">TECHTREE</strong></a>
+                </h1>
+                <nav id="gnb">
+                    <ul>
+                        <li><a href="">Company</a></li>
+                        <li><a href="">Business</a></li>
+                        <li><a href="">Solution</a></li>
+                        <li><a href="">Works</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+        </header>
         <div id="container">
             <h1></h1>
+            <!-- 메인 키비주얼 슬라이드 -->
             <div class="mv_wrap">
                 <div class="mv">
-                    <div class="mv_item">
-                        <p>사람중심의 <strong>Smart IT</strong> 세상 <strong>테크트리</strong>와 함께 만들어 갑니다.</p>
-                    </div>
-                    <div class="mv_item">
-                        <p>사람중심의 <strong>Smart IT</strong> 세상 <strong>테크트리</strong>와 함께 만들어 갑니다.</p>
-                    </div>
-                    <div class="mv_item">
-                        <p>사람중심의 <strong>Smart IT</strong> 세상 <strong>테크트리</strong>와 함께 만들어 갑니다.</p>
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide mv_item">
+                            <div class="mv_item_cont winH" style="background-image: url(../images/main/mv1.png);">
+                                <p class="mv_item_txt">사람중심의 <strong>Smart IT</strong> 세상 <span style="display: block;"></span> <strong>테크트리</strong>와 함께 만들어 갑니다.</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide mv_item winH" style="background-image: url(../images/main/mv1.png);">
+                            <div class="mv_item_cont" style="background-image: url(../images/main/mv1.png);">
+                                <p class="mv_item_txt">사람중심의 <strong>Smart IT</strong> 세상 <span style="display: block;"></span> <strong>테크트리</strong>와 함께 만들어 갑니다.</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide mv_item winH" style="background-image: url(../images/main/mv1.png);">
+                            <div class="mv_item_cont" style="background-image: url(../images/main/mv1.png);">
+                                <p class="mv_item_txt">사람중심의 <strong>Smart IT</strong> 세상 <span style="display: block;"></span> <strong>테크트리</strong>와 함께 만들어 갑니다.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <section class="main_sec main_sec_about">
-                <div class="main_sec_tit">
-                    <h2>About us</h2>
-                    <p>테크트리는 다양한 기술과 서비스의 융합과 통합을 통해 Smart Business와 Smart Life 시대를 여는 <br> 컨버전스 서비스 시대를 선도합니다.</p>
-                </div>
-                <div class="img_box">
+            <!-- // 메인 키비주얼 슬라이드 -->
+            <!-- 메인 About us -->
+            <section class="main_sec main_about bg">
+                <div class="inner">
+                    <div class="main_sec_tit">
+                        <h2>About us</h2>
+                        <p>테크트리는 다양한 기술과 서비스의 융합과 통합을 통해 <strong>Smart Business</strong>와 <strong>Smart Life</strong> 시대를 여는 <br> 컨버전스 서비스 시대를 선도합니다.</p>
+                    </div>
+                    <div class="img_box taC">
+                        <img src="../images/main/main_company_img.png" alt="">
+                    </div>
 
                 </div>
             </section>
-            <section class="main_sec main_sec_business">
-                <div class="main_sec_tit">
-                    <strong>Our Business</strong>
-                    <h2>사업영역</h2>
-                    <p>고객에게 안정된 서비스 제공과 수준 높은 기술 서비스 제공으로 <br> <b>컨버전스 사업, E-커머스사업, 시스템 통합 및 IT 컨설팅 사업분야에 주력하고 있습니다.</b> </p>
+            <!-- // 메인 About us -->
+            <!-- 메인 Business -->
+            <section class="main_sec main_business ">
+                <div class="inner">
+                    <div class="main_sec_tit">
+                        <strong class="tit_en">Our Business</strong>
+                        <h2>사업영역</h2>
+                        <p>고객에게 안정된 서비스 제공과 수준 높은 기술 서비스 제공으로 <br> <strong>컨버전스 사업, E-커머스사업, 시스템 통합 및 IT 컨설팅 사업분야</strong>에 주력하고 있습니다. </p>
+                    </div>
+                    <div class="main_business_list swiper-container">
+                        <ul class="swiper-wrapper">
+                            <li class="swiper-slide">
+                                <a href="">
+                                    <div class="img_box">
+                                        <img src="../images/main/business_ic_01.svg" alt="">
+                                        <span class="ov_bg">
+                                            <img src="../images/main/business_img_01.png" alt="">
+                                        </span>
+                                    </div>
+                                    <div class="txt_box">
+                                        <em class="num">01</em>
+                                        <strong>컨버젼스</strong>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="">
+                                    <div class="img_box">
+                                        <img src="../images/main/business_ic_02.svg" alt="커머스">
+                                        <span class="ov_bg">
+                                            <img src="../images/main/business_img_02.png" alt="">
+                                        </span>
+                                    </div>
+                                    <div class="txt_box">
+                                        <em class="num">02</em>
+                                        <strong>커머스</strong>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="">
+                                    <div class="img_box">
+                                        <img src="../images/main/business_ic_03.svg" alt="BIG DATA">
+                                        <span class="ov_bg">
+                                            <img src="../images/main/business_img_03.png" alt="">
+                                        </span>
+                                    </div>
+                                    <div class="txt_box">
+                                        <em class="num">03</em>
+                                        <strong>BIG DATA</strong>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="">
+                                    <div class="img_box">
+                                        <img src="../images/main/business_ic_04.svg" alt="신사업">
+                                        <span class="ov_bg">
+                                            <img src="../images/main/business_img_04.png" alt="">
+                                        </span>
+                                    </div>
+                                    <div class="txt_box">
+                                        <em class="num">04</em>
+                                        <strong>신사업</strong>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="btn_area taC">
+                        <a href="" class="btn view_more">
+                            <span>자세히 보기</span>
+                        </a>
+                    </div>
                 </div>
-                <ul>
-                    <li>
-                        <a href="">
-                            <div class="img_box">
-                                <span class="ov_bg"></span>
-                            </div>
-                            <div class="txt_box">
-                                <em class="num">01</em>
-                                <strong>컨버젼스</strong>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="img_box">
-                                <span class="ov_bg"></span>
-                            </div>
-                            <div class="txt_box">
-                                <em class="num">02</em>
-                                <strong>커머스</strong>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="img_box">
-                                <span class="ov_bg"></span>
-                            </div>
-                            <div class="txt_box">
-                                <em class="num">03</em>
-                                <strong>BIG DATA</strong>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="img_box">
-                                <span class="ov_bg"></span>
-                            </div>
-                            <div class="txt_box">
-                                <em class="num">04</em>
-                                <strong>신사업</strong>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
             </section>
-            <section class="main_sec main_sec_solution">
-
+            <!-- // 메인 Business -->
+            <!-- 메인 solution -->
+            <section class="main_sec main_solution bg">
+                <div class="inner">
+                    <div class="main_sec_tit">
+                        <strong class="tit_en">what Solution</strong>
+                        <h2>보유기술</h2>
+                        <p><strong>비즈니스 마케팅, IoT, Big Data</strong> 등 다양한 분야의 최적화된 솔루션을 제공합니다.</p>
+                    </div>
+                    <div class="btn_area taC">
+                        <a href="" class="btn view_more">
+                            <span>자세히 보기</span>
+                        </a>
+                    </div>
+                </div>
+            </section>
+            <!-- // 메인 solution -->
+            <!-- 메인 works -->
+            <section class="main_sec main_works">
+                <div class="inner">
+                    <div class="main_sec_tit">
+                        <strong class="tit_en">Works</strong>
+                        <h2>구축사례</h2>
+                    </div>
+                    <div class="btn_area taC">
+                        <a href="" class="btn view_more">
+                            <span>자세히 보기</span>
+                        </a>
+                    </div>
+                </div>
 
             </section>
-            <section class="main_sec main_sec_works">
-
-
-            </section>
+            <!-- // 메인 works -->
         </div>
-        <footer id="footer"></footer>
+        <footer id="footer" class="footer">
+
+        </footer>
     </div>
+    <script src="../js/swiper-bundle.min.js"></script> <!-- swiper css -->
+    <script src="../js/common.js"></script>
+    <script>
+        const mv = new Swiper('.mv',{
+            loop: true,
+            pagination: {
+                el: '.mv-pagination'
+            }
+        });
+
+
+        var mySwiper = undefined;
+        function initSwiper() {
+            var screenWidth = $(window).outerWidth();
+            if(screenWidth < 992 && mySwiper == undefined) {
+                mySwiper = new Swiper('.main_business_list', {
+                    spaceBetween: 0,
+
+                });
+            } else if (screenWidth > 991 && mySwiper != undefined) {
+                mySwiper.destroy();
+                mySwiper = undefined;
+                jQuery('.main_business_list .swiper-wrapper').removeAttr('style');
+                jQuery('.main_business_list .swiper-slide').removeAttr('style');
+            }
+        }
+
+        //Swiper plugin initialization
+        initSwiper();
+
+        //Swiper plugin initialization on window resize
+        $(window).on('resize', function(){
+            initSwiper();
+        });
+    </script>
 </body>
 </html>
