--- a/html/index.html
+++ b/html/index.html
@@ -183,7 +183,7 @@
                     <div class="main_sec_tit">
                         <strong class="tit_en">what Solution</strong>
                         <h2>보유기술</h2>
-                        <p><strong>비즈니스 마케팅, IoT, Big Data</strong> 등 다양한 분야의 최적화된 솔루션을 제공합니다.</p>
+                        <p><strong>비즈니스 마케팅, IoT, Big Data</strong> 등 <br class="m_only"> 다양한 분야의 최적화된 솔루션을 제공합니다.</p>
                     </div>
                     <div class="main_tech_slide main_responsive_slide swiper-container">
                         <ul class="main_tech_list swiper-wrapper">
