회사소개 작업

--- a/html/company.html
+++ b/html/company.html
@@ -74,7 +74,7 @@
                 </div>
 
             </div>
-            <div class="sub_sec bg">
+            <div class="sub_sec bg sub_sec_history">
                 <div class="inner">
                     <div class="sub_sec_tit">
                         <h2>연혁</h2>
@@ -155,6 +155,9 @@
                             </ul>
                         </div>
                     </div>
+                </div>
+                <div class="txt_img">
+                    <img src="../images/sub/sub_txt_img.png" alt="">
                 </div>
             </div>
             <div class="sub_sec">
