링크 추가, css 수정

--- a/html/company.html
+++ b/html/company.html
@@ -20,7 +20,7 @@
         <header id="header" class="header">
             <div class="header_inner">
                 <h1 class="logo">
-                    <a href="">
+                    <a href="index.html">
                         <strong class="blind">TECHTREE</strong>
                     </a>
                 </h1>
@@ -31,14 +31,13 @@
                 </button>
                 <nav id="gnb" class="gnb">
                     <ul>
-                        <li><a href=""><span>Company</span></a></li>
-                        <li><a href=""><span>Business</span></a></li>
-                        <li><a href=""><span>Solution</span> </a></li>
-                        <li><a href=""><span>Works</span></a></li>
+                        <li class="on"><a href="company.html"><span>Company</span></a></li>
+                        <li><a href="business.html"><span>Business</span></a></li>
+                        <li><a href="solution.html"><span>Solution</span> </a></li>
+                        <li><a href="works.html"><span>Works</span></a></li>
                     </ul>
                 </nav>
             </div>
-
         </header>
         <div id="container">
             <div class="sv_wrap" style="background-image: url('../images/sub/sv_company.png');">
