--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
         <header id="header" class="header">
             <div class="header_inner">
                 <h1 class="logo">
-                    <a href="">
+                    <a href="index.html">
                         <strong class="blind">TECHTREE</strong>
                     </a>
                 </h1>
@@ -30,14 +30,13 @@
                 </button>
                 <nav id="gnb" class="gnb">
                     <ul>
-                        <li><a href=""><span>Company</span></a></li>
-                        <li><a href=""><span>Business</span></a></li>
-                        <li><a href=""><span>Solution</span> </a></li>
-                        <li><a href=""><span>Works</span></a></li>
+                        <li><a href="company.html"><span>Company</span></a></li>
+                        <li><a href="business.html"><span>Business</span></a></li>
+                        <li><a href="solution.html"><span>Solution</span> </a></li>
+                        <li><a href="works.html"><span>Works</span></a></li>
                     </ul>
                 </nav>
             </div>
-
         </header>
         <div id="container">
             <!-- 메인 키비주얼 슬라이드 -->
