--- a/html/index.html
+++ b/html/index.html
@@ -41,20 +41,20 @@
         <div id="container">
             <!-- 메인 키비주얼 슬라이드 -->
             <div class="mv_wrap">
-                <div class="mv">
+                <div class="mv winH">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide mv_item">
-                            <div class="mv_item_cont winH" style="background-image: url(../images/main/mv1.png);">
+                            <div class="mv_item_cont " style="background-image: url(../images/main/mv1.png);">
                                 <p class="mv_item_txt">사람중심의 <br class="m_only"> <strong>Smart IT</strong> 세상  <br class="m_only"> <span class="spacing" style="display: block;"></span> <strong>테크트리</strong>와 함께  <br class="m_only"> 만들어 갑니다.</p>
                             </div>
                         </div>
                         <div class="swiper-slide mv_item " style="background-image: url(../images/main/mv1.png);">
-                            <div class="mv_item_cont winH" style="background-image: url(../images/main/mv1.png);">
+                            <div class="mv_item_cont " style="background-image: url(../images/main/mv1.png);">
                                 <p class="mv_item_txt">사람중심의 <br class="m_only"> <strong>Smart IT</strong> 세상  <br class="m_only"> <span class="spacing" style="display: block;"></span> <strong>테크트리</strong>와 함께  <br class="m_only"> 만들어 갑니다.</p>
                             </div>
                         </div>
                         <div class="swiper-slide mv_item " style="background-image: url(../images/main/mv1.png);">
-                            <div class="mv_item_cont winH" style="background-image: url(../images/main/mv1.png);">
+                            <div class="mv_item_cont " style="background-image: url(../images/main/mv1.png);">
                                 <p class="mv_item_txt">사람중심의 <br class="m_only"> <strong>Smart IT</strong> 세상  <br class="m_only"> <span class="spacing" style="display: block;"></span> <strong>테크트리</strong>와 함께  <br class="m_only"> 만들어 갑니다.</p>
                             </div>
                         </div>
