메인수정, 비지니스 페이지 작업

--- a/html/index.html
+++ b/html/index.html
@@ -48,18 +48,22 @@
                                 <p class="mv_item_txt">사람중심의 <br class="m_only"> <strong>Smart IT</strong> 세상  <br class="m_only"> <span class="spacing" style="display: block;"></span> <strong>테크트리</strong>와 함께  <br class="m_only"> 만들어 갑니다.</p>
                             </div>
                         </div>
-                        <div class="swiper-slide mv_item " style="background-image: url(../images/main/mv1.png);">
-                            <div class="mv_item_cont " style="background-image: url(../images/main/mv1.png);">
+                        <div class="swiper-slide mv_item ">
+                            <div class="mv_item_cont " style="background-image: url(../images/main/mv2.png);">
                                 <p class="mv_item_txt">사람중심의 <br class="m_only"> <strong>Smart IT</strong> 세상  <br class="m_only"> <span class="spacing" style="display: block;"></span> <strong>테크트리</strong>와 함께  <br class="m_only"> 만들어 갑니다.</p>
                             </div>
                         </div>
-                        <div class="swiper-slide mv_item " style="background-image: url(../images/main/mv1.png);">
-                            <div class="mv_item_cont " style="background-image: url(../images/main/mv1.png);">
+                        <div class="swiper-slide mv_item ">
+                            <div class="mv_item_cont " style="background-image: url(../images/main/mv3.png);">
                                 <p class="mv_item_txt">사람중심의 <br class="m_only"> <strong>Smart IT</strong> 세상  <br class="m_only"> <span class="spacing" style="display: block;"></span> <strong>테크트리</strong>와 함께  <br class="m_only"> 만들어 갑니다.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="mv-pagination"></div>
+                    <div class="mv_txt_wrap">
+                        <!-- <p class="mv_item_txt">사람중심의 <br class="m_only"> <strong>Smart IT</strong> 세상  <br class="m_only"> <span class="spacing" style="display: block;"></span> <strong>테크트리</strong>와 함께  <br class="m_only"> 만들어 갑니다.</p> -->
+                        <div class="mv-pagination"></div>
+                    </div>
+
                     <div class="mv-nav mv-prev"></div>
                     <div class="mv-nav mv-next"></div>
                 </div>
@@ -372,9 +376,10 @@
     <script src="../js/common.js"></script>
     <script>
         var mv = new Swiper('.mv',{
-            loop: true,
-            //effect:'fade',
             speed: 600,
+            effect:'fade',
+            loop: true,
+
             autoplay: {
                 delay: 4500,
                 disableOnInteraction: false,
