비지니스 페이지 작업

--- a/html/business.html
+++ b/html/business.html
@@ -31,8 +31,8 @@
                 </button>
                 <nav id="gnb" class="gnb">
                     <ul>
-                        <li class="on"><a href="company.html"><span>Company</span></a></li>
-                        <li><a href="business.html"><span>Business</span></a></li>
+                        <li><a href="company.html"><span>Company</span></a></li>
+                        <li class="on"><a href="business.html"><span>Business</span></a></li>
                         <li><a href="solution.html"><span>Solution</span> </a></li>
                         <li><a href="works.html"><span>Works</span></a></li>
                     </ul>
