서브페이지 작업

--- a/html/index.html
+++ b/html/index.html
@@ -99,7 +99,7 @@
                     <div class="main_business_list ">
                         <ul class="mb_list">
                             <li class="mb_item">
-                                <a href="" class="link">
+                                <a href="business.html#business_area" class="link">
                                     <div class="img_box">
                                         <img src="../images/main/business_ic_01.svg" alt="컨버젼스" class="b_ico" >
                                         <span class="ov_bg">
@@ -117,7 +117,7 @@
                                 </a>
                             </li>
                             <li class="mb_item">
-                                <a href="" class="link">
+                                <a href="business.html#business_area" class="link">
                                     <div class="img_box">
                                         <img src="../images/main/business_ic_02.svg" alt="커머스" class="b_ico">
                                         <span class="ov_bg">
@@ -135,7 +135,7 @@
                                 </a>
                             </li>
                             <li class="mb_item">
-                                <a href="" class="link">
+                                <a href="business.html#business_area" class="link">
                                     <div class="img_box">
                                         <img src="../images/main/business_ic_03.svg" alt="BIG DATA" class="b_ico">
                                         <span class="ov_bg">
@@ -153,7 +153,7 @@
                                 </a>
                             </li>
                             <li class="mb_item">
-                                <a href="" class="link">
+                                <a href="business.html#business_area" class="link">
                                     <div class="img_box">
                                         <img src="../images/main/business_ic_04.svg" alt="신사업" class="b_ico">
                                         <span class="ov_bg">
@@ -173,7 +173,7 @@
                         </ul>
                     </div>
                     <div class="btn_area taC">
-                        <a href="" class="btn view_more">
+                        <a href="business.html" class="btn view_more">
                             <span>자세히 보기</span>
                         </a>
                     </div>
@@ -191,7 +191,7 @@
                     <div class="main_tech_slide main_responsive_slide swiper-container">
                         <ul class="main_tech_list swiper-wrapper">
                             <li class="main_tech_item swiper-slide">
-                                <a href="" class="link">
+                                <a href="solution.html#bmp" class="link">
                                     <div class="ico_box">
                                         <img src="../images/main/solution_ic_01.svg" alt="" class="ico_origin">
                                         <img src="../images/main/solution_ic_w_01.svg" alt="" class="ico_hover">
@@ -203,7 +203,7 @@
                                 </a>
                             </li>
                             <li class="main_tech_item swiper-slide">
-                                <a href="" class="link">
+                                <a href="solution.html#iot" class="link">
                                     <div class="ico_box">
                                         <img src="../images/main/solution_ic_02.svg" alt="" class="ico_origin">
                                         <img src="../images/main/solution_ic_w_02.svg" alt="" class="ico_hover">
@@ -215,7 +215,7 @@
                                 </a>
                             </li>
                             <li class="main_tech_item swiper-slide">
-                                <a href="" class="link">
+                                <a href="solution.html#ssi" class="link">
                                     <div class="ico_box">
                                         <img src="../images/main/solution_ic_03.svg" alt="" class="ico_origin">
                                         <img src="../images/main/solution_ic_w_03.svg" alt="" class="ico_hover">
@@ -227,7 +227,7 @@
                                 </a>
                             </li>
                             <li class="main_tech_item swiper-slide">
-                                <a href="" class="link">
+                                <a href="solution.html#dms" class="link">
                                     <div class="ico_box">
                                         <img src="../images/main/solution_ic_04.svg" alt="" class="ico_origin">
                                         <img src="../images/main/solution_ic_w_04.svg" alt="" class="ico_hover">
@@ -242,7 +242,7 @@
                         <div class="mv-pagination"></div>
                     </div>
                     <div class="btn_area taC">
-                        <a href="" class="btn view_more ty_grey">
+                        <a href="solution.html" class="btn view_more ty_grey">
                             <span>자세히 보기</span>
                         </a>
                     </div>
@@ -351,7 +351,7 @@
                         <div class="mv-pagination"></div>
                     </div>
                     <div class="btn_area taC">
-                        <a href="" class="btn view_more">
+                        <a href="works.html" class="btn view_more">
                             <span>더 보기</span>
                         </a>
                     </div>
