--- a/html/business.html
+++ b/html/business.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sub_sec bg ">
+            <div id="business_area" class="sub_sec bg ">
                 <div class="inner">
                     <div class="sub_business">
                         <ul class="sub_business_list">
